--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -37,13 +37,13 @@ en:
       updated: "Your password has been changed successfully. You are now signed in."
       updated_not_active: "Your password has been changed successfully."
     registrations:
-      destroyed: "Bye! Your account has been successfully cancelled. We hope to see you again soon."
+      destroyed: ":( You're leaving us? Okay... I guess we'll just destroy your account... right now... Please come back soon!"
       signed_up: "Welcome! Please tell us how you feel."
       signed_up_but_inactive: "You have signed up successfully. However, we could not sign you in because your account is not yet activated."
       signed_up_but_locked: "You have signed up successfully. However, we could not sign you in because your account is locked."
       signed_up_but_unconfirmed: "A message with a confirmation link has been sent to your email address. Please follow the link to activate your account."
       update_needs_confirmation: "You updated your account successfully, but we need to verify your new email address. Please check your email and follow the confirm link to confirm your new email address."
-      updated: "Your account has been updated successfully."
+      updated: "(?) Beer Art Reviews will remember that."
     sessions:
       signed_in: "Welcome Back!"
       signed_out: "Ya'll come back now, ya hear!"
